<resources>
    <string name="app_name">Story App</string>
    <string name="welcome_title">Selamat datang di Story App</string>
    <string name="welcome_desc">Story app merupakan sebuah aplikasi yang dirancang supaya anda dapat berbagi cerita ke teman teman anda.</string>
    <string name="login">Masuk</string>
    <string name="register">Buat akun</string>
    <string name="login_text">Masukkan email dan password anda</string>
    <string name="register_text">Buat akun anda sekarang</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name_hint">Masukkan nama anda</string>
    <string name="email_hint">Masukkan email anda</string>
    <string name="password_hint">Masukkan password anda</string>
    <string name="login_to_register">Belum punya akun?</string>
    <string name="register_to_login">Sudah punya akun?</string>
    <string name="story_title">Title</string>
    <string name="story_short_description">Short description</string>
    <string name="story_description">Description</string>
    <string name="story_title_hint">Masukkan title</string>
    <string name="story_short_description_hint">Masukkan short description</string>
    <string name="story_description_hint">Masukkan description</string>
    <string name="navigation_story">Story</string>
    <string name="navigation_add_story">Tambah Story</string>
    <string name="navigation_logout">Keluar</string>
    <string name="story_image">Story image</string>
    <string name="description_hint">some description</string>
    <string name="retry">Retry</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="story_detail">Story Detail</string>
    <string name="title_upload_story">Title Story</string>
    <string name="empty_image_warning">Choose an image</string>
    <string name="upload_failed">Upload failed\n</string>
    <string name="user_not_found">user is not found</string>
    <string name="upload_success">upload success\n</string>
    <string name="capture_image">Capture Image</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_map">normal</string>
    <string name="satellite_map">satellite</string>
    <string name="terrain_map">terrain</string>
    <string name="hybrid_map">hybrid</string>
</resources>