<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/storyImage"
            android:contentDescription="@string/story_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/sample_image" />

        <TextView
            android:id="@+id/storyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/story_title"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/storyDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:text="@string/story_short_description" />
    </LinearLayout>
</androidx.cardview.widget.CardView>