<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.3"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivRegisterImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:alpha="0"
        tools:alpha="100"
        android:contentDescription="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/login_image" />

    <TextView
        android:id="@+id/tvRegisterTitle"
        style="@style/Text.Title.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/register"
        android:textSize="20sp"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />

    <TextView
        android:id="@+id/tvRegisterTextName"
        style="@style/Text.Content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginTop="20dp"
        android:layout_marginStart="32dp"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisterTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/RegisterNameEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvRegisterTextName"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisterTextName"
        tools:alpha="100">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:ems="1"
            android:textSize="12sp"
            android:padding="16dp"
            android:inputType="textPersonName"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvRegisterTextEmail"
        style="@style/Text.Content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RegisterNameEditTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerEmailEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvRegisterTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisterTextEmail"
        tools:alpha="100">

        <com.dicodingsub.storyapp.ui.customview.EditTextEmail
            android:id="@+id/registerEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:ems="10"
            android:textSize="12sp"
            android:padding="16dp"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvRegisterTextPassword"
        style="@style/Text.Content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmailEditTextLayout" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerPasswordEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        app:endIconMode="password_toggle"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvRegisterTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisterTextPassword"
        tools:alpha="100">

        <com.dicodingsub.storyapp.ui.customview.EditTextPassword
            android:id="@+id/registerPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:ems="10"
            android:textSize="12sp"
            android:padding="16dp"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        style="@style/Button.Enable"
        android:layout_marginTop="30dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:alpha="0"
        android:text="@string/register"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordEditTextLayout"
        tools:alpha="100" />

    <TextView
        android:id="@+id/tvRegisterToLoginText"
        style="@style/Text.Content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_to_login"
        android:layout_marginTop="50dp"
        android:layout_marginStart="32dp"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

    <TextView
        android:id="@+id/tvRegisterToLogin"
        style="@style/Text.Content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-12dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:text="@string/login"
        android:textColor="@color/green_primary"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintStart_toEndOf="@id/tvRegisterToLoginText"
        app:layout_constraintTop_toTopOf="@+id/tvRegisterToLoginText"
        app:layout_constraintBottom_toBottomOf="@+id/tvRegisterToLoginText" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:indeterminateTint="@color/green_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>