<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.3"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivLoginImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/login_image"
        tools:alpha="100" />

    <TextView
        android:id="@+id/tvLoginTitle"
        style="@style/Text.Title.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        tools:alpha="100"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />

    <TextView
        android:id="@+id/tvLoginTextEmail"
        style="@style/Text.Content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:alpha="0"
        tools:alpha="100"
        android:layout_marginTop="48dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginEmailEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        tools:alpha="100"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvLoginTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginTextEmail">

        <com.dicodingsub.storyapp.ui.customview.EditTextEmail
            android:id="@+id/loginEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:ems="10"
            android:textSize="12sp"
            android:padding="16dp"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvLoginTextPassword"
        style="@style/Text.Content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:alpha="0"
        tools:alpha="100"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailEditTextLayout" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPasswordEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        tools:alpha="100"
        app:endIconMode="password_toggle"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvLoginTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginTextPassword">

        <com.dicodingsub.storyapp.ui.customview.EditTextPassword
            android:id="@+id/loginPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:ems="10"
            android:textSize="12sp"
            android:padding="16dp"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        style="@style/Button.Enable"
        android:layout_marginTop="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:alpha="0"
        android:text="@string/login"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordEditTextLayout"
        tools:alpha="100" />

    <TextView
        android:id="@+id/tvLoginToRegisterText"
        style="@style/Text.Content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_to_register"
        android:layout_marginTop="50dp"
        android:layout_marginStart="32dp"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/tvLoginToRegister"
        style="@style/Text.Content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-12dp"
        android:layout_marginTop="34dp"
        android:padding="16dp"
        android:textColor="@color/green_primary"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/register"
        android:alpha="0"
        tools:alpha="100"
        app:layout_constraintStart_toEndOf="@id/tvLoginToRegisterText"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:indeterminateTint="@color/green_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>